add: controller endpoints for getting thumbnails